Push footer down to the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,14 @@
     box-sizing: border-box;
 }
 
+/* General styles*/
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    color: #3a3a3a;
+}
+
 /* Header */
 header {
     background-color: aquamarine;
@@ -12,10 +20,11 @@ header {
 
 /* Main Content */
 main {
-    background-color: brown;
+    background-color: lightblue;
+    flex: 1 0 auto;
 }
 
 /* Footer */
 footer {
-    background-color: darkolivegreen;
+    background-color: lightgoldenrodyellow;
 }
