--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,10 @@ header {
     background-color: aquamarine;
 }
 
+h1 {
+    font-family: 'Oswald', sans-serif;
+}
+
 /* Main Content */
 main {
     background-color: lightblue;
