--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,9 +84,15 @@ nav {
 
 /* Main Content */
 main {
-    background-color: lightblue;
     flex: 1 0 auto;
     margin-top: 47px;
+}
+
+/* Hero section */
+#hero {
+    height: 600px;
+    width: 100%;
+    background: url("../images/running.jpg") no-repeat center center/cover;
 }
 
 /* Footer */
