--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,10 +39,12 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-}header a {
-     text-decoration: none;
-     color: inherit;
- }
+}
+
+    header a {
+        text-decoration: none;
+        color: inherit;
+    }
 
 #menu {
     font-size: 110%;
@@ -50,9 +52,9 @@ header {
     list-style-type: none;
 }
 
-#menu li {
-    margin-bottom: 1em;
-}
+    #menu li {
+        margin-bottom: 1em;
+    }
 
 .active {
     border-bottom: 1px solid #3a3a3a;
@@ -72,7 +74,7 @@ nav {
 
 /* Nav-toggle */
 
-#nav-toggle:checked~nav {
+#nav-toggle:checked ~ nav {
     display: block;
 }
 
@@ -109,20 +111,20 @@ main {
     padding-left: 10px;
 }
 
-#cover-text > h2, #cover-text > h3 {
-    color: #ffffff;
-}
+    #cover-text > h2, #cover-text > h3 {
+        color: #ffffff;
+    }
 
 #reasons {
     margin: 20px auto;
     width: 90%;
 }
 
-#reasons h2 {
-    font-size: 280%;
-    margin-bottom: 20px;
-    text-align: center;
-}
+    #reasons h2 {
+        font-size: 280%;
+        margin-bottom: 20px;
+        text-align: center;
+    }
 
 #benefits-physical > div, #benefits-mental > div {
     line-height: 20px;
@@ -160,19 +162,19 @@ main {
     flex-wrap: wrap;
 }
 
-#times div {
-    color: #fafafa;
-    background-color: rgba(0, 0, 0, 0.6);
-    padding: 15px;
-    text-align: center;
-    flex-basis: 200px;
-    flex-grow: 1;
-    border: 2px solid white;
-}
+    #times div {
+        color: #fafafa;
+        background-color: rgba(0, 0, 0, 0.6);
+        padding: 15px;
+        text-align: center;
+        flex-basis: 200px;
+        flex-grow: 1;
+        border: 2px solid white;
+    }
 
-#times h3 {
-    color: #fafafa;
-}
+    #times h3 {
+        color: #fafafa;
+    }
 
 /* Gallery page*/
 #photos img {
@@ -185,17 +187,25 @@ main {
 }
 /* Footer */
 #social-networks {
-        text-align: center;
-        padding: 20px 0;
-        display: flex;
-        justify-content: space-evenly;
-        list-style-type: none;
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+}
+
+    #social-networks i {
+        font-size: 160%;
+        padding: 5%;
+        color: #3a3a3a;
     }
 
-#social-networks i {
-    font-size: 160%;
-    padding: 5%;
-    color: #3a3a3a;
+/* Media Queries: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
 }
 
 /* Media Queries: tablets and larger(768px and up) */
@@ -213,9 +223,9 @@ main {
         display: flex;
     }
 
-    #menu li {
-        padding-left: 1rem;
-    }
+        #menu li {
+            padding-left: 1rem;
+        }
 
     .nav-toggle-label {
         display: none;
@@ -245,20 +255,27 @@ main {
     }
 
     #benefits-physical > div, #benefits-mental > div {
-        width: 75%;
+            width: 75%;
     }
 
     #benefits-mental > div {
-        text-align: end;
-        align-self: flex-end;
+            text-align: end;
+            align-self: flex-end;
     }
 
+    #photos {
+        column-count: 3;
+    }
 }
 
 /* Media Queries: laptop (992px and up) */
 @media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
+    }
+
+    #photos {
+        column-count: 4;
     }
 }
 
@@ -269,9 +286,9 @@ main {
         flex-direction: row;
     }
 
-    #benefits > div {
-        flex: 1;
-    }
+        #benefits > div {
+            flex: 1;
+        }
 
     #benefits-image {
         order: 0;
@@ -279,12 +296,11 @@ main {
 
     #benefits-mental {
         order: 1;
-
     }
 
-    #benefits-mental > div {
-        align-self: flex-start;
-    }
+        #benefits-mental > div {
+            align-self: flex-start;
+        }
 
     #benefits-physical > div {
         align-self: flex-end;
