--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,6 +90,8 @@ nav {
 main {
     flex: 1 0 auto;
     margin-top: 47px;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Hero section */
@@ -185,6 +187,54 @@ main {
 #photos {
     line-height: 0;
 }
+
+/* Sign-up page */
+/* Form */
+#signup {
+    background-image: url("../images/signup-image.webp");
+    background-size: cover;
+    background-position: 75%;
+    padding: 20px 10% 0 10%;
+    flex-grow: 1;
+}
+
+#signup-form {
+    color: #ffffff;
+    background-color: rgba(60, 60, 60, 0.6);
+    padding: 30px;
+}
+
+    #signup-form > h2 {
+        color: #fafafa;
+        margin-bottom: 20px;
+    }
+
+.text-input {
+    background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+    padding: 0 5px;
+}
+
+.radio-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.join-button {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px;
+    font-size: 100%;
+    background-color: #454b1b;
+    color: #fafafa;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
@@ -254,14 +304,14 @@ main {
         width: 100%;
     }
 
-    #benefits-physical > div, #benefits-mental > div {
+        #benefits-physical > div, #benefits-mental > div {
             width: 75%;
-    }
+        }
 
-    #benefits-mental > div {
+        #benefits-mental > div {
             text-align: end;
             align-self: flex-end;
-    }
+        }
 
     #photos {
         column-count: 3;
